--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "^4.14.0",
+    "express-rate-limit": "^2.6.0",
     "formidable": "^1.0.17",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
